--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="keywords" content="How to Lose Weight Fast in 3 Simple Steps" />
 <meta name="description" content="How to Lose Weight Fast in 3 Simple Steps" />
 <link href="style.css" rel="stylesheet" type="text/css" media="screen" />
-
-
+<meta name="facebook-domain-verification" content="2ompk2lz48k5odp2boidkqp7hjmkyd" />
+	
 </head>
 <body id="hg3sbNr">
 <div id="header">
